@@ -1,6 +1,10 @@
 2007-06-11  Inge Wallin  <inge@lysator.liu.se>
 
-	Change float to double to increase precision.  	
+	More float to double changes, taking it step by step.
+	* src/lib/MarbleModel.{h,cpp}: float -> double
+	* src/lib/MarbleWidget.{h,cpp}:   float -> double
+
+	Change float to double to increase precision.
 	* src/lib/Quaternion.{h,cpp}: float -> double
 	* src/lib/GeoPoint.{h,cpp}:   float -> double
 	* src/lib/GeoPolygon.{h,cpp}: float -> double
